Primarily made URL changes due to review of PR